--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -75,9 +75,9 @@
 <div class="py-3" style="">
     <div class="container-flex">
         <div class="col">
-            <h3 class="text-center">
-                <p class="display-3 text-light p-3" style="background-color: red"><b>H</b></p>
-            </h3>
+            <p class="text-center">
+                <p class="display-3 text-light p-3" style="background-color: red"> H </p>
+            </p>
         </div>
     </div>
 </div>
