--- a/src/main/resources/templates/observation_ohbp.html
+++ b/src/main/resources/templates/observation_ohbp.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 
-<body class="container-max-width p-4">
+<body class="container-flex p-4" >
 <nav class="navbar navbar-expand-md navbar" style="">
     <div class="container-flex">
         <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
@@ -54,14 +54,13 @@
                     <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
             <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
-                <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
+                <h2 class="flex-grow-1 text-primary" style="text-align: center" contenteditable="true">
                     <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
             </div>
             <div class="d-flex justify-content-center col-md-2">
-                <h3 class="display-4 p-3 d-flex align-items-center justify-content-center flex-grow-1" style="background-color:red">
-                    <b class="d-flex">
-                    <a href="#" title="hitna" style="text-align: center;">
-                        <img src="../ikone/hitna_d.webp" class="img-responsive"></a></b></h3>
+                <h3 class="d-flex">
+                    <a href="#" title="krevet" style="text-align: center;">
+                        <img src="../ikone/krevet3.webp" class="img-responsive"></a></b></h3>
             </div>
         </div>
         <hr class="solid">
@@ -69,7 +68,7 @@
 </div>
 <div class="row">
     <div class="container-flex">
-        <div class="row" >
+        <div class="row">
             <div class="col-lg-4 col-md-12 p-3">
                 <h4><b></b></h4>
             </div>
@@ -105,78 +104,11 @@
                         <h3>Vrijeme dolaska</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3>Status</h3>
-                    </th>
-                    <th class="font-weight-bold">
                         <h3>Lokacija</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Ambulanta</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Ispis</h3>
                     </th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td class="font-weight-bold" style="background-color: red">
-                        <h3 class="text-center d-flex justify-content-center align-items-center"></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>#435821</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Marko</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Marković</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 10:16</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/hitna.webp"></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Interna</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>B2</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color: red">
-                        <h3 class="align-items-center"></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>#435821</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ivo</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ivić</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 10:23</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/hitna.webp"></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Interna</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ambulanta</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
-                    </td>
-                </tr>
                 <tr>
                     <td class="font-weight-bold" style="background-color:orange">
                         <h3></h3>
@@ -185,25 +117,16 @@
                         <h3>#432821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
+                        <h3>Ana</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Prezime</h3>
+                        <h3>Anić</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 11:13</h3>
                     </td>
-                    <td>
-                        <a href="#" title="krevet"><img src="../ikone/krevet3.webp"></a>
-                    </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>B4</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
+                        <h3>Akutni dio</h3>
                     </td>
                 </tr>
                 <tr>
@@ -214,25 +137,16 @@
                         <h3>#347853</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
+                        <h3>Ivan</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Prezime</h3>
+                        <h3>Horvat</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:53</h3>
                     </td>
-                    <td>
-                        <a href="#" title="krevet"><img src="../ikone/krevet3.webp"></a>
-                    </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>E3</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
+                        <h3>Subakutni dio</h3>
                     </td>
                 </tr>
                 <tr>
@@ -243,83 +157,16 @@
                         <h3>#339821</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Ime</h3>
+                        <h3>Marko</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Prezime</h3>
+                        <h3>Županić</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>25.02.2023 11:40</h3>
                     </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/rtg.webp"></a>
-                    </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>RTG</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:green">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>#443521</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Prezime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 10:20<a href="#" title="retr"> <img src="../ikone/upitnik.webp"></a></h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/kat4.webp"></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Čekoanica</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color: #2c76f8">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>#743866</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Prezime</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>25.02.2023 09:30</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/osoba.webp"></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Čekaonica</h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
+                        <h3>Subakutni dio</h3>
                     </td>
                 </tr>
                 </tbody>
@@ -343,4 +190,5 @@
     </div>
 </div>
 </body>
+
 </html>
