--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                <h1 class="text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1" style="">
+                <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1" style="">
                     <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
             <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
@@ -58,7 +58,8 @@
                     <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
             </div>
             <div class="d-flex justify-content-center col-md-2">
-                <h3 class="display-4 p-3 d-flex align-items-center justify-content-center flex-grow-1"> <!-- style="background-color:red">-->
+                <h3 class="display-4 p-3 d-flex align-items-center justify-content-center flex-grow-1">
+                    <!-- style="background-color:red">-->
                     <b class="d-flex">
                         <a href="#" title="hitna" style="text-align: center;">
                             <img src="../ikone/hslucaj.webp" class="img-responsive"></a></b></h3>
@@ -85,7 +86,7 @@
 </div>
 <div class="">
     <div class="container-flex">
-        <div class="table-responsive" >
+        <div class="table-responsive" style="">
             <table class="table table-bordered table-striped">
                 <thead class="thead-dark">
                 <tr class="display: inline-block">
@@ -105,13 +106,16 @@
                         <h3>Vrijeme dolaska</h3>
                     </th>
                     <th class="font-weight-bold">
+                        <h3>Retrijaža</h3>
+                    </th>
+                    <th class="font-weight-bold">
                         <h3>Status</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3>Lokacija</h3>
+                        <h3>Dijagnostika</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3>Ambulanta</h3>
+                        <h3>Lokacija</h3>
                     </th>
                     <th class="font-weight-bold">
                         <h3>Ispis</h3>
@@ -135,14 +139,19 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:16</h3>
                     </td>
+                    <td class="font-weight-bold" >
+                        <!-- <h3 >25.02.2023 10:16</h3>-->
+                    </td>
+                    <td>
+                        <a href="#" title="status">
+                            <h3> 1/5 </h3>
+                        </a>
+                    </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/hitna.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Interna</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Akutni dio </h3>
+                        <h3>Reanimacija</h3>
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
@@ -164,17 +173,19 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:23</h3>
                     </td>
+                    <td class="font-weight-bold">
+                        <!--  <h3 >25.02.2023 10:23</h3>-->
+                    </td>
+                    <td>
+                        <a href="#" title="status">
+                            <h3> 2/4 </h3>
+                        </a>
+                    </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/hitna.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Interna</h3>
-                    </td>
-                    <td class="font-weight-bold">
                         <h3>Akutni dio </h3>
-                    </td>
-                    <td>
-                        <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
                     </td>
                 </tr>
                 <tr>
@@ -193,14 +204,19 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 11:13</h3>
                     </td>
+                    <td class="font-weight-bold">
+                        <h3><a href="#" title="retr"> <img src="../ikone/upitnik.webp"></a></h3>
+                    </td>
+                    <td>
+                        <a href="#" title="status">
+                            <h3> 1/3 </h3>
+                        </a>
+                    </td>
                     <td>
                         <a href="#" title="krevet"><img src="../ikone/krevet3.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>B4</h3>
+                        <h3>Subakutni dio</h3>
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
@@ -222,11 +238,15 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:53</h3>
                     </td>
+                    <td class="font-weight-bold">
+                    </td>
+                    <td>
+                        <a href="#" title="status">
+                            <h3> 2/3 </h3>
+                        </a>
+                    </td>
                     <td>
                         <a href="#" title="krevet"><img src="../ikone/krevet3.webp"></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Subakutni dio </h3>
@@ -251,14 +271,19 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 11:40</h3>
                     </td>
+                    <td class="font-weight-bold">
+                        <h3><a href="#" title="retr"> <img src="../ikone/upitnik.webp"></a></h3>
+                    </td>
+                    <td>
+                        <a href="#" title="status">
+                            <h3> 1/3 </h3>
+                        </a>
+                    </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/rtg.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>RTG</h3>
+                        <h3>Subakutni</h3>
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
@@ -278,16 +303,19 @@
                         <h3>Stipić</h3>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>25.02.2023 10:20<a href="#" title="retr"> <img src="../ikone/upitnik.webp"></a></h3>
+                        <h3>25.02.2023 10:20</h3>
+                    </td>
+                    <td class="font-weight-bold">
+                        <h3><a href="#" title="retr"> <img src="../ikone/upitnik.webp"></a></h3>
+                    </td>
+                    <td>
+                        <!-- <a href="#" title="hitna"><img src="../ikone/kat4.webp"></a>-->
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/kat4.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Subakutni dio</h3>
+                        <h3>Čekaonica</h3>
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
@@ -309,11 +337,12 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 09:30</h3>
                     </td>
+                    <td class="font-weight-bold"></td>
+                    <td>
+                        <!--<a href="#" title="hitna"><img src="../ikone/osoba.webp"></a>-->
+                    </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/osoba.webp"></a>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Lokacija</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3>Čekaonica</h3>
